--- a/wqindex.html
+++ b/wqindex.html
@@ -1,5 +1,5 @@
 <html>
 <title>this is my new website</title>
 <h1>This is my first learning website</h1>
-<p> Welcome</p>
+<p> Welcome to my site</p>
 </html>
